<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trening App</string>
    <string name="road_activity">Road</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="ignore">Ignore</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>

    <!-- MENU -->
    <string-array name="menu_sections">
        <item>Trening</item>
        <item>History</item>
        <item>Agenda</item>
        <item>Settings</item>
    </string-array>
    <string-array name="menu_icons">
        <item>trening</item>
        <item>history</item>
        <item>access_alarms</item>
        <item>action_settings</item>
    </string-array>
    <string-array name="menu_fragments">
        <item>com.sayler.inz.gps.GpsFragment</item>
        <item>com.sayler.inz.history.HistoryFragment</item>
        <item>com.sayler.inz.agenda.AgendaFragment</item>
        <item>com.sayler.inz.settings.SettingsFragment</item>
    </string-array>

    <!-- SPORTS -->
    <string-array name="sports_list">
        <item>Running</item>
        <item>Bicycling</item>
    </string-array>
    <!-- SPORTS CLASS -->
    <string-array name="sports_classes">
        <item>com.sayler.inz.gps.sports.Running</item>
        <item>com.sayler.inz.gps.sports.Bicycling</item>
    </string-array>

    <string name="sports_title">Sports</string>

    <!-- GPS -->
    <!-- controls buttons -->
    <string name="start_button">Start</string>
    <string name="end_button">End</string>
    <string name="running">Running...</string>
    <string name="gps_fixed">Gps fixed!</string>
    <string name="gps_searching">Gps searching!</string>
    <string name="gps_not_fixed">Gps not fixed!</string>
    <string name="gps_not_fixed_dialog_message">Gps signal is not fixed.</string>
    <string name="end_recording_dialog_message">Are you sure to end recording?</string>
    <string name="choose_sport_dialog_message">Choose sport:</string>
    <string name="time_elapsed">Time: </string>
    <string name="distance">Distance: </string>
    <string name="calories">Calories: </string>
    <string name="welcome_text">Welcome, choose something from menu.</string>
    <string name="turn_on_gps_dialog_message">Gps is off, would you like to turn it on?</string>
    <string name="settings_text">Settings</string>
    <string name="main_setitings_category_title">Main Settings</string>
    <string name="weight_title">Body weight</string>
    <string name="bike_weight_title">Bike weight</string>
    <string name="default_sport_title">Default sport</string>
    <string name="import_gpx">Import GPX</string>
    <string name="export_gpx">Export GPX</string>
    <string name="add_agenda">Add agenda</string>
    <string name="delete">Delete</string>
    <string name="click_again_to_close">Click back again to close</string>
    <string name="road_tab">Road</string>
    <string name="stats_tab">Statistics</string>

    <!-- PLOT -->
    <string name="plot_elevation">Elevation (m)</string>
    <string name="plot_time">Time</string>
    <string name="plot_title">Elevation changes</string>

</resources>